# MindHack-Labs

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  README_badge_snippet.md  SECURITY.md  app.py  dashboard_app.py  docker-compose.yml  pyproject.toml  requirements.txt  seed_db.py
apps/: db.py
apps/ai_redteam/: cli.py  service.py
apps/deepfake_detection/: cli.py  service.py
apps/pqc_benchmark/: cli.py  service.py
apps/prompt_injection/: cli.py  service.py
assets/: README.txt
dashboards/: README.md  grafana_deepfake.json  grafana_pqc.json  grafana_prompt_injection.json  grafana_redteam.json
dashboards/superset/: README.md  deepfake_results.csv  pqc_benchmarks.csv  prompt_injection_runs.csv  redteam_simulations.csv
docs/: README.md  _config.yml  ai-red-team.md  deepfake-detection.md  docker.md  index.md  pqc-benchmarking.md  prompt-injection.md
n8n_workflows/: AIRedTeamSimulator.json  DeepfakeDetector.json  PQCBenchmarking.json  PromptInjectionTester.json
profile_readme/: README.md
python_apis/: Dockerfile  deepfake_api.py  pqc_benchmark.py  prompt_test.py  redteam_agent.py  requirements.txt
samples/: ai_redteam_samples.txt  curl_examples.sh  deepfake_results_samples.csv  deepfake_samples.txt  mitre_techniques.txt  pqc_benchmark_results.csv  pqc_runs_samples.csv  prompt_injection_samples.csv  prompt_payloads.txt  redteam_plans_samples.csv
tests/: test_smoke.py
