[project]
name = "mindhack-labs"
version = "0.1.0"
description = "Python-only AI security labs: prompt injection tests, deepfake stub, AI red team planner, PQC benchmarks."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Moazzam Hussain"}]
dependencies = [
  "flask", "openai", "psutil", "click",
  "streamlit", "pandas", "matplotlib", "sqlite-utils"
]

[project.urls]
Homepage = "https://github.com/<YOUR_USERNAME>/<REPO>"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["apps", "apps.prompt_injection", "apps.deepfake_detection", "apps.ai_redteam", "apps.pqc_benchmark"]
include-package-data = true

[project.scripts]
mindhack-prompt = "apps.prompt_injection.cli:main"
mindhack-redteam = "apps.ai_redteam.cli:main"
mindhack-pqc = "apps.pqc_benchmark.cli:main"
mindhack-deepfake = "apps.deepfake_detection.cli:main"
